# GenAI_ext

./: .gitignore  db.sqlite3  r.txt  readme.txt  req.txt  requirements.txt  result.txt  time.txt
GenAI/: README.md  server.py
GenAI/llm_integration/: google_client.py
GenAI/notebooks/: test.py
GenAI/prompts/: classification.yaml
GenAI/utils/: document_loader.py  fields_model.py  parsers.py  utils.py
GenAI_ext/: settings.py
demo/: .gitignore  fields.json  pyproject.toml  server.py
demo/llm_integration/: google_client.py
demo/notebooks/: olama.ipynb  testing.ipynb
demo/prompts/: classification.yaml  deed.yaml  mortgage.yaml
demo/utils/: utils.py
document_extr/: models.py  tests.py  views.py
document_extr/data/json/: mortgage.json
document_extr/migrations/: 0004_documenttype.py
document_extr/templates/: keyingscreen.html  login.html
